# HandOS

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
docs/: GITHUB_PAGES_DEPLOY.md  USABILITY_AND_SWE_ROADMAP.md
handos/: __init__.py  __main__.py  app.py  data.py
handos/actions/: __init__.py  mouse.py
handos/config/: __init__.py
handos/context/: __init__.py
handos/core/: __init__.py  config.py  engine.py  events.py
handos/gestures/: __init__.py  pinch.py
handos/signal/: __init__.py  dead_zone.py  ema.py  kalman.py
handos/ui/: __init__.py  overlay.py
handos/vision/: __init__.py  capture.py  detector.py  frame_buffer.py  model_asset.py  preprocessor.py  worker.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  styles.css
web/src/components/: ArchitectureDiagram.tsx  CLIReference.tsx  FeatureCard.tsx  Footer.tsx  Hero.tsx  InstallationSteps.tsx  Layout.tsx  Navbar.tsx
web/src/pages/: DemoPage.tsx  HomePage.tsx
